--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Cotizacion Cripto</h1>
 <main>
-    <input type="text">
+        <input id="buscador" type="text" placeholder="Busca una moneda">
     <table>
         <thead>
             <tr>
